--- a/.github/workflows/QtCI.yml
+++ b/.github/workflows/QtCI.yml
@@ -48,76 +48,63 @@ jobs:
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
           qmake
           nmake
-      # # tag打包
-      # - name: package
-      #   if: startsWith(github.event.ref, 'refs/tags/')
-      #   env:
-      #     VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
-      #     packageName: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
-      #   shell: pwsh
-      #   run: |
-      #     New-Item -ItemType Directory ${env:packageName}
-      #     Copy-Item bin\HelloActions-Qt.exe ${env:packageName}\
-      #     windeployqt --qmldir . ${env:packageName}\HelloActions-Qt.exe
-      # # tag存储
-      # - name: uploadArtifact
-      #   if: startsWith(github.event.ref, 'refs/tags/')
-      #   uses: actions/upload-artifact@v1
-      #   with:
-      #     name: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
-      #     path: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}.zip
-      # 设置后续step通用的环境变量
-      # - name: setEnv
-      #   if: startsWith(github.event.ref, 'refs/tags/')
-      #   shell: pwsh
-      #   env:
-      #     packageInfo: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
-      #   run: |
-      #     $PACKAGE_INFO = ${env:packageInfo}
-      #     # actions 特殊语法
-      #     echo "::set-env name=packageName::$PACKAGE_INFO"
-      #     Write-Host 'packageName:'${env:packageName}
-      # # tag部署
-      # - name: package
-      #   if: startsWith(github.event.ref, 'refs/tags/')
-      #   env:
-      #     VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
-      #   shell: pwsh
-      #   run: |
-      #     New-Item -ItemType Directory ${env:packageName}
-      #     Copy-Item bin\HelloActions-Qt.exe ${env:packageName}\
-      #     windeployqt --qmldir . ${env:packageName}\HelloActions-Qt.exe
-      # # 打包
-      # - name: CompressArchive
-      #   if: startsWith(github.event.ref, 'refs/tags/')
-      #   shell: pwsh
-      #   run: |
-      #     Compress-Archive -Path ${env:packageName} ${env:packageName}'.zip'
-      # # tag 创建Release
-      # - name: createRelease
-      #   id: createRelease
-      #   if: startsWith(github.event.ref, 'refs/tags/')
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   uses: actions/create-release@v1.0.0
-      #   with:
-      #     tag_name: ${{ github.ref }}
-      #     release_name: Release ${{ github.ref }}
-      #     body: ${{ github.event.head_commit.message }}
-      #     draft: false
-      #     prerelease: false
-      # # tag 上传Release
-      # - name: uploadRelease
-      #   id: uploadRelease
-      #   if: startsWith(github.event.ref, 'refs/tags/')
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   uses: actions/upload-release-asset@v1.0.1
-      #   with:
-      #     upload_url: ${{ steps.createRelease.outputs.upload_url }}
-      #     asset_path: ./${{ env.packageName }}.zip
-      #     asset_name: ${{ env.packageName }}.zip
-      #     asset_content_type: application/zip
+      # tag打包
+      - name: package
+        if: startsWith(github.event.ref, 'refs/tags/')
+        env:
+          VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
+          archiveName: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+        shell: pwsh
+        run: |
+          # 创建文件夹
+          New-Item -ItemType Directory ${env:archiveName}
+          # 拷贝exe
+          Copy-Item bin\${env:targetName} ${env:archiveName}\
+          # 拷贝依赖
+          windeployqt --qmldir . ${env:archiveName}\${env:targetName}
+          # 打包zip
+          Compress-Archive -Path ${env:archiveName} ${env:archiveName}'.zip'
+          # 记录环境变量packageName给后续step
+          $name = ${env:archiveName}
+          echo "::set-env name=packageName::$name"
+          # 打印环境变量packageName
+          Write-Host 'packageName:'${env:packageName}
+      # tag 创建github-Release
+      - name: createReleaseWin
+        id: createReleaseWin
+        if: startsWith(github.event.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/create-release@v1.0.0
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: ${{ github.event.head_commit.message }}
+          draft: false
+          prerelease: false
+      # 重定向upload_url到环境变量uploadUrl。如果上一步创建失败，通过github-api获取tag对应的upload_url。
+      - name: getLatestTagRelease
+        # 上一步无论成功还是失败
+        if: startsWith(github.event.ref, 'refs/tags/') && (failed() || succeed())
+        shell: pwsh
+        env:
+          githubUrl: ${{ github.event.repository.full_name }}
+          upUrl: ${{ steps.createReleaseWin.outputs.upload_url }}
+          ref: ${{ github.event.ref }}
+        run: |
+          .github/scripts/getUploadUrl.ps1 ${env:githubUrl} ${env:upUrl} ${env:ref}
+      # tag 上传Release
+      - name: uploadRelease
+        id: uploadRelease
+        if: startsWith(github.event.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/upload-release-asset@v1.0.1
+        with:
+          upload_url: ${{ env.uploadUrl }}
+          asset_path: ./${{ env.packageName }}.zip
+          asset_name: ${{ env.packageName }}.zip
+          asset_content_type: application/zip
   ubuntuBuildJob:
     name: ubuntu
     runs-on: ${{ matrix.os }}
