--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,41 +1,62 @@
-name: QtCI
+name: Windows
 on: 
+  # push代码时触发workflow
   push:
+    # 忽略README.md
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
+  # pull_request时触发workflow
   pull_request:
+    # 忽略README.md
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
 jobs:
-  windowsBuildJob:
-    name: windows
+  build:
+    name: Build
+    # 运行平台， windows-latest目前是windows server 2019
     runs-on: windows-latest
     strategy:
+      # 矩阵配置
       matrix:
         qt_ver: [5.9.8,5.12.6]
         qt_target: [desktop]
+        # mingw用不了
+        # qt_arch: [win64_msvc2017_64, win32_msvc2017, win32_mingw53,win32_mingw73]
         qt_arch: [win64_msvc2017_64, win32_msvc2017]
+        # 从矩阵中除外的配置
         exclude: 
+          # 不存在5.9.8-win32_msvc2017的版本
           - qt_ver: 5.9.8
             qt_arch: win32_msvc2017
+          # mingw用不了
+          # - qt_ver: 5.9.8
+          #   qt_arch: win32_mingw73
+          # - qt_ver: 5.12.6
+          #   qt_arch: win32_mingw53
+        # 额外设置msvc_arch
         include:
           - qt_arch: win64_msvc2017_64
             msvc_arch: x64
           - qt_arch: win32_msvc2017
             msvc_arch: x86
-    env:
-      targetName: HelloActions-Qt.exe
+      env:
+        targetName: HelloActions-Qt.exe
+    # 步骤
     steps:
-      #安装Qt
+      # 安装Qt
       - name: Install Qt
+        # 使用外部action。这个action专门用来安装Qt
         uses: jurplel/install-qt-action@v2.0.0
         with:
+          # Version of Qt to install
           version: ${{ matrix.qt_ver }}
+          # Target platform for build
           target: ${{ matrix.qt_target }}
+          # Architecture for Windows/Android
           arch: ${{ matrix.qt_arch }}
-      # 获取代码
+      # 拉取代码
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
@@ -144,92 +165,3 @@ jobs:
           asset_path: ./${{ env.packageName }}.zip
           asset_name: ${{ env.packageName }}.zip
           asset_content_type: application/zip
-  ubuntuBuildJob:
-    name: ubuntu
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-16.04,ubuntu-18.04]
-        qt_ver: [5.9.8,5.12.6]
-    steps:         
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v2.0.0
-        with:
-          version: ${{ matrix.qt_ver }}
-      # Ubuntu 安装 OpenGL相关库
-      - name: ubuntu install GL library
-        run: sudo apt-get install -y libglew-dev libglfw3-dev
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1          
-      - name: build ubuntu
-        run: |
-          qmake
-          make
-  macosBuildJob:
-    name: macos
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest]
-        qt_ver: [5.9.8,5.12.6]
-    steps:
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v2.0.0
-        with:
-          version: ${{ matrix.qt_ver }}
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-      - name: build macos
-        run: |
-          qmake
-          make
-  iosBuildJob:
-    name: ios
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest]
-        qt_ver: [5.12.6]
-        qt_target: [ios]
-    steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v2.0.0
-        with:
-          version: ${{ matrix.qt_ver }}
-          target: ${{ matrix.qt_target }}
-      - name: build ios
-        run: |
-          qmake -r -spec macx-ios-clang CONFIG+=release CONFIG+=iphoneos
-          make
-  androidBuildJob:
-    name: android
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        qt_ver: [5.12.6]
-        qt_target: [android]
-        # android_arm64_v8a 暂时不支持. install-qt-action 依赖的aqtinstall版本为0.5*,需要升级
-        # qt_arch: [android_x86,android_armv7,android_arm64_v8a]
-        qt_arch: [android_x86,android_armv7]
-    steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v2.0.0
-        with:
-          version: ${{ matrix.qt_ver }}
-          target: ${{ matrix.qt_target }}
-          arch: ${{ matrix.qt_arch }}
-      - name: build android
-        run: |
-          export ANDROID_SDK_ROOT=$ANDROID_HOME
-          export ANDROID_NDK_ROOT=$ANDROID_HOME/ndk-bundle
-          qmake
-          make
