--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -13,8 +13,8 @@ on:
       - 'README.md'
       - 'LICENSE'
 jobs:
-  build:
-    name: Build
+  windowsBuildJob:
+    name: windows
     # 运行平台， windows-latest目前是windows server 2019
     runs-on: windows-latest
     strategy:
@@ -41,8 +41,8 @@ jobs:
             msvc_arch: x64
           - qt_arch: win32_msvc2017
             msvc_arch: x86
-      env:
-        targetName: HelloActions-Qt.exe
+    env:
+      targetName: HelloActions-Qt.exe
     # 步骤
     steps:
       # 安装Qt
