--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -16,11 +16,29 @@ jobs:
       matrix:
         os: [macos-latest]
         qt_ver: [5.9.8,5.12.6]
+        qt_arch: [clang_64]
     steps:
+      - name: cacheQt
+        id: MacosCacheQt
+        uses: actions/cache@v1
+        with:
+          path: ../Qt/${{matrix.qt_ver}}/${{matrix.qt_arch}}
+          key: ${{ runner.os }}-Qt/${{matrix.qt_ver}}/${{matrix.qt_arch}}
+      - name: setupQt
+        if: steps.MacosCacheQt.outputs.cache-hit == 'true'
+        shell: pwsh
+        env:
+          QtPath: ../Qt/${{matrix.qt_ver}}/${{matrix.qt_arch}}
+        run: |
+          $qt_Path=${env:QtPath}
+          echo "::set-env name=Qt5_Dir::$qt_Path"
+          echo "::add-path::$qt_Path/bin"    
       - name: Install Qt
+        if: steps.MacosCacheQt.outputs.cache-hit != 'true'
         uses: jurplel/install-qt-action@v2.0.0
         with:
           version: ${{ matrix.qt_ver }}
+      
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
