--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -39,12 +39,30 @@ jobs:
         include:
           - qt_arch: win64_msvc2017_64
             msvc_arch: x64
+            qt_arch_install: msvc2017_64
           - qt_arch: win32_msvc2017
             msvc_arch: x86
+            qt_arch_install: msvc2017
     # 步骤
     steps:
+      - name: cacheQt
+        id: WindowsCacheQt
+        uses: actions/cache@v1
+        with:
+          path: ../Qt/${{matrix.qt_ver}}/${{matrix.qt_arch_install}}
+          key: ${{ runner.os }}-Qt/${{matrix.qt_ver}}/${{matrix.qt_arch}}
+      - name: setupQt
+        if: steps.WindowsCacheQt.outputs.cache-hit == 'true'
+        shell: pwsh
+        env:
+          QtPath: ../Qt/${{matrix.qt_ver}}/${{matrix.qt_arch_install}}
+        run: |
+          $qt_Path=${env:QtPath}
+          echo "::set-env name=Qt5_Dir::$qt_Path"
+          echo "::add-path::$qt_Path/bin"          
       # 安装Qt
       - name: Install Qt
+        if: steps.WindowsCacheQt.outputs.cache-hit != 'true'
         # 使用外部action。这个action专门用来安装Qt
         uses: jurplel/install-qt-action@v2.0.0
         with:
